objects/box__BoxSign_Signer_Input__c.object
<CustomObject>
    <description>An object to hold the input values from a document signer.</description>
    <fields>
        <fullName>box__BoxSign_Signer__c</fullName>
        <label>Box Sign Signer</label>
        <referenceTo>box__BoxSign_Signer__c</referenceTo>
        <relationshipLabel>Box Sign Signer Inputs</relationshipLabel>
        <relationshipName>BoxSign_Signer_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>box__Checkbox_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>box__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Label__c</fullName>
        <description>The label given to the input tag.</description>
        <label>Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>box__Page_Index__c</fullName>
        <label>Page Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>box__Text__c</fullName>
        <description>Text fields are synced here.</description>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>box__Type_Code__c</fullName>
        <description>Code for the input type: &apos;s&apos; (signature input), &apos;t&apos; (text input), &apos;d&apos; (date input) or &apos;c&apos; (checkbox input)</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box Sign Signer Input</label>
    <nameField>
        <displayFormat>SRSI-{0000000000}</displayFormat>
        <label>Signer Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Sign Signer Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>